<resources>
    <string name="app_name">UdacityProjectFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_github">LOGO GITHUB</string>
    <string name="text_welcome">Welcome to the app that helps you search for users and their Github repositories</string>
    <string name="go_instructions_button">Go Instructions</string>
    <string name="instructions_app">Below are some instructions for using the app</string>
    <string name="instructions_app_input">To search for a user just type the name in the input.</string>
    <string name="instructions_click">Right after, just choose one and you will be redirected to this user\'s profile.</string>
    <string name="instructions_profile">The user profile screen will be displayed on the user profile screen and you will be able to see their repositories.</string>
    <string name="button_search_user">SEARCH USER</string>
    <string name="go_to_users_favorites">Go to users favorites</string>
    <string name="udacity_final_project">Udacity Final Project</string>
    <string name="made_by_npaulo_henrick">Made by\nPaulo Henrick</string>
    <string name="search_for_a_user_below">Search for a user below</string>
    <string name="error_call_api">There was an error fetching the user</string>
    <string name="notification_channel_name">final_project</string>
    <string name="title_notification">Search for a user on github</string>
    <string name="content_notification">Enter the app and search for any existing user on github</string>
    <string name="button_hist">Search history</string>
</resources>